okd/openshift-monitoring/base/alert-manager-discord-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: openshift-monitoring
    kubernetes.io/metadata.name: alert-manager-discord
  name: alert-manager-discord
