okd/openshift-monitoring/base/egress-firewall.yaml
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: alert-manager-discord
spec:
  egress:
    # Control Plane
    - type: Allow
      to:
        nodeSelector:
          matchLabels:
            node-role.kubernetes.io/control-plane: ""
    - type: Allow
      to:
        dnsName: discord.com
    # https://www.cloudflare.com/ips/
    # Cloudflare IP Ranges
    - type: Allow
      to:
        cidrSelector: 162.158.0.0/15
    - type: Deny
      to:
        cidrSelector: 0.0.0.0/0
